--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "dependencies": {
     "@mdi/font": "^3.6.95",
     "axios": "^0.19.2",
+    "buefy": "^0.8.15",
     "core-js": "^3.6.4",
+    "moment": "^2.24.0",
     "roboto-fontface": "*",
     "vue": "^2.6.11",
     "vue-router": "^3.1.6",
