--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "axios": "^0.19.2",
     "buefy": "^0.8.15",
     "core-js": "^3.6.4",
+    "jspdf": "^1.5.3",
+    "jspdf-autotable": "^3.3.2",
     "moment": "^2.24.0",
     "roboto-fontface": "*",
     "vue": "^2.6.11",
